--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 *{
-    color: chocolate;
+    margin: 0;
+    padding: 0;
+    font-family: 微軟正黑體;
+    box-sizing: border-box;
+}
+
+nav{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    padding: 30px;
 }
 
 a{
