--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: Ngaan;
+    src: url(./font/I.Ngaan.ttf);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -9,6 +14,12 @@ nav{
     display: grid;
     grid-template-columns: 30% 70%;
     padding: 30px;
+}
+
+#logo span{
+    font-family: Ngaan;
+    font-size: 36px;
+    font-weight: 600;
 }
 
 a{
