--- a/style.css
+++ b/style.css
@@ -22,6 +22,21 @@ nav{
     font-weight: 600;
 }
 
-a{
+#nav{
+    display: grid;
+    grid-template-columns: repeat(3,150px);
+    align-items: center;
+    text-align: center;
+}
+
+#nav a{
     text-decoration:none;
+    color: red;
+    font-size: 20px;
+    transition: 0.3s;
+}
+
+#nav a:hover{
+    color: black;
+    font-size: 24px;
 }
