--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ nav{
     display: grid;
     grid-template-columns: 30% 70%;
     padding: 30px;
+    box-shadow: 0px 30px 30px black;
+}
+
+#banner{
+    width: 100%;
+    height: 400px;
+    background-image: url(./img/noodle.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #logo span{
