--- a/style.css
+++ b/style.css
@@ -17,15 +17,6 @@ nav{
     box-shadow: 0px 30px 30px black;
 }
 
-#banner{
-    width: 100%;
-    height: 400px;
-    background-image: url(./img/noodle.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 #logo span{
     font-family: Ngaan;
     font-size: 36px;
@@ -49,4 +40,10 @@ nav{
 #na a:hover{
     color: black;
     font-size: 24px;
+}
+
+#banner{
+    background-image: url(./img/max-oh-OQwjPYTeaiw-unsplash.jpg);
+    background-size: cover;
+    height: 100vh;
 }
