--- a/style.css
+++ b/style.css
@@ -51,4 +51,32 @@ nav{
     background-size: cover;
     height: 100vh;
     background-position: center;
+    display: grid;
+    color: white;
+    align-items: center;
+    text-align: center;
+}
+
+#banner div{
+    width: 600px;
+    margin: 0 auto;
+}
+
+#banner div h1,#banner div h4{
+    font-family: Ngaan;
+}
+
+#banner div h1{
+    font-size: 120px;
+    text-shadow: 0 5px 5px rgba(0,0,0,0.5);
+}
+
+#banner div h4{
+    font-size: 30px;
+    text-align: left;
+}
+
+section{
+    width: 1200px;
+    margin: 0 auto;
 }
