--- a/style.css
+++ b/style.css
@@ -140,23 +140,38 @@ section hr{
     color: black;
 }
 
-#contant pre{
+#contant{
+    text-align: center;
+}
+
+#contant p{
+    width: 80%;
     text-align: center;
     line-height: 3;
+    margin: 0px auto;
 }
 
 form{
-    width: 600px;
+    width: 80%;
     margin: 0 auto;
     text-align: center;
-    box-sizing: border-box;
 }
 
-form input{
-    width: 49%;
+form div{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-gap: 20px;
+}
+
+input{
     height: 40px;
-    margin-bottom: 20px;
     border: 1px solid black;
+}
+
+textarea{
+    grid-column: 1/3;
+    border: 1px solid black;
+    height: 250px;
 }
 
 ::placeholder{
@@ -164,25 +179,29 @@ form input{
     font-size: 16px;
 }
 
-form textarea{
-    width: 100%;
-    height: 240px;
-    margin-bottom: 20px;
-    display: block;
-    border: 1px solid black;
-}
-
 #submit{
+    margin-top: 20px;
+    width: 200px;
     background-color: black;
     color: white;
+    transition: 0.3s;
 }
 
 #submit:hover{
     background-color: gray;
+    border: 1px solid rgba(0,0,0,0);
 }
 
-#footer{
+footer{
     background-color: black;
+    color: white;
     width: 100vw;
-    height: 160px;
+    padding: 80px;
+    text-align: center;
+
+}
+
+footer p{
+    display: inline;
+    font-family: Ngaan;
 }
